# pubmed-paper-fetcher

./: README.md  pyproject.toml  result.csv
cli/: get_papers_list.py
pubmed_fetcher/: api.py  types.py  utils.py
